3_Phase_dq/PSoC_3ph_f2f/hls/current_refgen_dq/vivado_hls.log
================================================================
  Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
  Version 2017.2
  Build 1909853 on Thu Jun 15 18:55:24 MDT 2017
  Copyright (C) 1986-2017 Xilinx, Inc. All Rights Reserved.
================================================================
INFO: [HLS 200-10] Running 'C:/Xilinx/Vivado_HLS/2017.2/bin/unwrapped/win64.o/vivado_hls.exe'
INFO: [HLS 200-10] For user 'ASUS-PSC' on host 'desktop-q08u40i' (Windows NT_amd64 version 6.2) on Fri Oct 06 17:10:31 +0200 2017
INFO: [HLS 200-10] In directory 'D:/Projects/PSoC_3ph_f2f/hls/current_refgen_dq'
INFO: [HLS 200-10] Creating and opening project 'D:/Projects/PSoC_3ph_f2f/hls/current_refgen_dq/current_refgen_dq_prj'.
INFO: [HLS 200-10] Adding design file './src/current_refgen_dq.cpp' to the project
INFO: [HLS 200-10] Adding design file './src/current_refgen_dq.h' to the project
INFO: [HLS 200-10] Adding test bench file './src/tb_current_refgen_dq.cpp' to the project
INFO: [HLS 200-10] Creating and opening solution 'D:/Projects/PSoC_3ph_f2f/hls/current_refgen_dq/current_refgen_dq_prj/sol_synth'.
INFO: [HLS 200-10] Setting target device to 'xc7z010clg400-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Analyzing design file './src/current_refgen_dq.cpp' ... 
WARNING: [HLS 200-40] In file included from D:/Projects/PSoC_3ph_f2f/hls/current_refgen_dq/current_refgen_dq_prj/sol_synth/.autopilot/db/current_refgen_dq.pragma.1.cpp:1:
In file included from ./src/current_refgen_dq.cpp:1:
./src/current_refgen_dq.cpp:7:24: error: use of undeclared identifier 'beta'
_ssdm_op_SpecInterface(beta, "ap_none", 1, 1, "", 0, 0, "", "", "", 0, 0, 0, 0, "", "");
                       ^
./src/current_refgen_dq.cpp:7:24: error: use of undeclared identifier 'alpha'
_ssdm_op_SpecInterface(alpha, "ap_none", 1, 1, "", 0, 0, "", "", "", 0, 0, 0, 0, "", "");
                       ^
2 errors generated.
Compilation of the preprocessed source 'current_refgen_dq.g' failed
    while executing
"source run.tcl"
    invoked from within
"hls::main run.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
